# ESP32S3_SpeedCoach_Touch

./: README.md
components/activity/: CMakeLists.txt  activity.c
components/activity/include/: activity.h
components/activity_log/: CMakeLists.txt  activity_log.c
components/activity_log/include/: activity_log.h
components/battery_drv/: CMakeLists.txt  battery_drv.c
components/battery_drv/include/: battery_drv.h
components/ble/: CMakeLists.txt  ble.c
components/ble/include/: ble.h
components/gps_gtu8/: CMakeLists.txt  gps_gtu8.c
components/gps_gtu8/include/: gps_gtu8.h
components/i2c_helper/: CMakeLists.txt  i2c_helper.c
components/i2c_helper/include/: i2c_helper.h
components/lcd_st7789/: lcd_st7789.c
components/lcd_st7789/include/: lcd_st7789.h
components/nvs_helper/: CMakeLists.txt  nvs_helper.c
components/nvs_helper/include/: nvs_helper.h
components/pwr_key/: CMakeLists.txt  pwr_key.c
components/qmi8658/: CMakeLists.txt  Kconfig  qmi8658.c
components/rtc_pcf85063/: CMakeLists.txt  rtc_pcf85063.c
components/sd_mmc_helper/: CMakeLists.txt  sd_mmc_helper.c
components/stroke_detection/: CMakeLists.txt  stroke_detection.c
components/touch_cst328/: touch_cst328.c
main/: CMakeLists.txt  main.c  ui.c  ui.h
main/ui/: ui.h  ui_controls_page.c  ui_controls_page.h  ui_core.c  ui_data_page.c  ui_data_page.h  ui_imu_page.c  ui_imu_page.h  ui_menu_page.h  ui_sd_test_page.c  ui_sd_test_page.h  ui_settings_page.c  ui_settings_page.h  ui_status_bar.c  ui_status_bar.h  ui_system_page.c  ui_system_page.h  ui_theme.c  ui_theme.h
(+6 files in other folders)
