idf_component_register(
    SRCS
        "main.c"
        "ui/ui_core.c"
        "ui/ui_settings_page.c"
        "ui/ui_data_page.c"
        "ui/ui_status_bar.c"
        "ui/ui_theme.c"
    INCLUDE_DIRS
        "."
        "ui"
    REQUIRES
        lcd_st7789
        touch_cst328
        esp_lvgl_port
        i2c_helper
        qmi8658
        stroke_detection
        sd_mmc_helper
        ble
        rtc_pcf85063
        pwr_key
        battery_drv
        activity
)
